# acp-sdk

examples/echo-agent/echo_agent/: state.py
examples/email_reviewer/email_reviewer/: state.py
examples/mailcomposer/mailcomposer/: state.py
manifest-generator/: Makefile  base-manifest.json  manifest.json  manifest_emailrevier.json  pyproject.toml
manifest-generator/src/manifest_generator/: __init__.py  main.py
manifest-generator/src/tests/: generated.json  test.py
